--- a/Login/Login.Css
+++ b/Login/Login.Css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-*
-{
-	margin: 0;
+
+* {
+	margin-left: 10px;
 	padding: 0;
 	box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
-body 
-{
+
+body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -15,8 +15,8 @@ body
 	flex-direction: column;
 	background: #23242a;
 }
-.box 
-{
+
+.box {
 	position: relative;
 	width: 380px;
 	height: 420px;
@@ -24,46 +24,8 @@ body
 	border-radius: 8px;
 	overflow: hidden;
 }
-.box::before 
-{
-	content: '';
-	z-index: 1;
-	position: absolute;
-	top: -50%;
-	left: -50%;
-	width: 380px;
-	height: 420px;
-	transform-origin: bottom right;
-	background: linear-gradient(0deg,transparent,#45f3ff,#45f3ff);
-	animation: animate 6s linear infinite;
-}
-.box::after 
-{
-	content: '';
-	z-index: 1;
-	position: absolute;
-	top: -50%;
-	left: -50%;
-	width: 380px;
-	height: 420px;
-	transform-origin: bottom right;
-	background: linear-gradient(0deg,transparent,#45f3ff,#45f3ff);
-	animation: animate 6s linear infinite;
-	animation-delay: -3s;
-}
-@keyframes animate 
-{
-	0%
-	{
-		transform: rotate(0deg);
-	}
-	100%
-	{
-		transform: rotate(360deg);
-	}
-}
-form 
-{
+
+form {
 	position: absolute;
 	inset: 2px;
 	background: #28292d;
@@ -73,21 +35,21 @@ form
 	display: flex;
 	flex-direction: column;
 }
-h2 
-{
+
+h2 {
 	color: #45f3ff;
 	font-weight: 500;
 	text-align: center;
 	letter-spacing: 0.1em;
 }
-.inputBox 
-{
+
+.inputBox {
 	position: relative;
 	width: 300px;
 	margin-top: 35px;
 }
-.inputBox input 
-{
+
+.inputBox input {
 	position: relative;
 	width: 100%;
 	padding: 20px 10px 10px;
@@ -101,8 +63,8 @@ h2
 	transition: 0.5s;
 	z-index: 10;
 }
-.inputBox span 
-{
+
+.inputBox span {
 	position: absolute;
 	left: 0;
 	padding: 20px 0px 10px;
@@ -112,15 +74,15 @@ h2
 	letter-spacing: 0.05em;
 	transition: 0.5s;
 }
-.inputBox input:valid ~ span,
-.inputBox input:focus ~ span 
-{
+
+.inputBox input:valid~span,
+.inputBox input:focus~span {
 	color: #45f3ff;
 	transform: translateX(0px) translateY(-34px);
 	font-size: 0.75em;
 }
-.inputBox i 
-{
+
+.inputBox i {
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -133,41 +95,41 @@ h2
 	pointer-events: none;
 	z-index: 9;
 }
-.inputBox input:valid ~ i,
-.inputBox input:focus ~ i 
-{
+
+.inputBox input:valid~i,
+.inputBox input:focus~i {
 	height: 44px;
 }
-.links 
-{
+
+.links {
 	display: flex;
 	justify-content: space-between;
 }
-.links a 
-{
+
+.links a {
 	margin: 10px 0;
 	font-size: 0.75em;
 	color: #8f8f8f;
 	text-decoration: beige;
 }
-.links a:hover, 
-.links a:nth-child(2)
-{
+
+.links a:hover,
+.links a:nth-child(2) {
 	color: #45f3ff;
 }
-input[type="submit"] 
-{
+
+input[type="submit"] {
 	border: none;
 	outline: none;
-    background: #45f3ff;
+	background: #45f3ff;
 	padding: 11px 25px;
-    width: 100px;
-    margin-top: 10px;
+	width: 100px;
+	margin-top: 10px;
 	border-radius: 4px;
 	font-weight: 600;
-    cursor: pointer;
+	cursor: pointer;
 }
-input[type="submit"]:active 
-{
+
+input[type="submit"]:active {
 	opacity: 0.8;
-} 
+}
