--- a/Home/home.css
+++ b/Home/home.css
@@ -6,14 +6,16 @@
 }
 
 Header {
+    position: relative;
     display: flex;
     text-align: center;
     justify-content: space-between;
     align-items: center;
-    
+    z-index: 1;
 }
 
 .Links a {
+    
     text-decoration: none;
     color: #fff;
     margin: 20px;
@@ -25,14 +27,17 @@ Header {
     transition: 0.5s;
 }
 
+
 .Background{
     position: absolute;
+    top:0;
     width: 100%;
     height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .Background video{
     object-fit: cover;
@@ -40,4 +45,5 @@ Header {
     height: 100%;
     z-index: -1;
     filter: brightness(25%);
+    pointer-events: all;
 }
